--- a/.github/workflows/load-test.yaml
+++ b/.github/workflows/load-test.yaml
@@ -7,6 +7,10 @@ on:
         description: 'The target environment (dev|staging|perf)'
         required: true
         default: 'perf'
+      branch_name:
+        description: 'The branch name with the code to load test'
+        required: false
+        default: 'master'
       run_time:
         description: 'Stop after the specified amount of time, e.g. (300s, 20m, 3h, 1h30m, etc.)'
         required: true
@@ -35,12 +39,11 @@ jobs:
           role-to-assume: ${{ secrets.VAEC_DEPLOY_ROLE }}
           role-skip-session-tagging: true
           role-duration-seconds: 900
-
       - name: Invoke load test
         uses: ./.github/actions/run-commands-on-ec2
         with:
           instance-id-ssm-parameter-path: /utility/locust/instance
           commands: >-
-            "sudo su - locust -c \"cd notification-api && git pull &>/dev/null\"",
+            "sudo su - locust -c \"cd notification-api && git pull --all && git checkout ${{ github.event.inputs.branch_name }} &>/dev/null\"",
             "sudo su - locust -c \"locust -f notification-api/load_testing/locustfile.py --headless -u ${{ github.event.inputs.num_users }} -r ${{ github.event.inputs.spawn_rate }} --host https://${{ github.event.inputs.environment }}.api.notifications.va.gov --run-time ${{ github.event.inputs.run_time }} --csv results 2>/dev/null\"",
             "sudo su - locust -c \"cat results_stats.csv\""
