Check out load test code using git sha instead of branch name
Co-authored-by: Ling Tran <ltran@thoughtworks.com>

--- a/.github/workflows/load-test.yaml
+++ b/.github/workflows/load-test.yaml
@@ -7,10 +7,9 @@ on:
         description: 'The target environment (dev|staging|perf)'
         required: true
         default: 'perf'
-      branch_name:
-        description: 'The branch name with the code to load test'
-        required: false
-        default: 'master'
+      commit_sha:
+        description: 'The commit containing code you want to load test'
+        required: true
       run_time:
         description: 'Stop after the specified amount of time, e.g. (300s, 20m, 3h, 1h30m, etc.)'
         required: true
@@ -44,6 +43,6 @@ jobs:
         with:
           instance-id-ssm-parameter-path: /utility/locust/instance
           commands: >-
-            "sudo su - locust -c \"cd notification-api && git pull --all && git checkout ${{ github.event.inputs.branch_name }} &>/dev/null\"",
+            "sudo su - locust -c \"cd notification-api && git pull --all && git checkout ${{ github.event.inputs.commit_sha }} &>/dev/null\"",
             "sudo su - locust -c \"locust -f notification-api/load_testing/locustfile.py --headless -u ${{ github.event.inputs.num_users }} -r ${{ github.event.inputs.spawn_rate }} --host https://${{ github.event.inputs.environment }}.api.notifications.va.gov --run-time ${{ github.event.inputs.run_time }} --csv results 2>/dev/null\"",
             "sudo su - locust -c \"cat results_stats.csv\""
