--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Flask-Bcrypt==0.7.1
 flask-marshmallow==0.11.0
 Flask-Migrate==2.5.2
 git+https://github.com/mitsuhiko/flask-sqlalchemy.git@500e732dd1b975a56ab06a46bd1a20a21e682262#egg=Flask-SQLAlchemy==2.3.2.dev20190108
-Flask==1.1.1
+Flask==1.1.4
 click-datetime==0.2
 eventlet==0.30.2    # Can't use 0.31.0 as Gunicorn does not yet support it. (https://github.com/benoitc/gunicorn/pull/2581)
 gunicorn==20.0.4
@@ -46,35 +46,32 @@ itsdangerous==0.24
 git+https://github.com/department-of-veterans-affairs/notification-utils.git@1.0.66#egg=notification-utils==1.0.66
 
 ## The following requirements were added by pip freeze:
-alembic==1.7.5
+alembic==1.7.6
 amqp==2.6.1
 asn1crypto==1.4.0
-attrs==21.2.0
-awscli==1.22.22
+attrs==21.4.0
+awscli==1.22.66
 bcrypt==3.2.0
 billiard==3.6.4.0
 bleach==4.1.0
 blinker==1.4
-boto3==1.20.22
-botocore==1.23.22
+boto3==1.21.11
+botocore==1.24.11
 certifi==2021.10.8
-charset-normalizer==2.0.9
-click==8.0.3
+charset-normalizer==2.0.12
+click==7.1.2
 colorama==0.4.3
-cryptography==36.0.0
-dataclasses==0.8
+cryptography==36.0.1
 Deprecated==1.2.13
 dnspython==1.16.0
 docutils==0.15.2
-Flask-Cors==3.0.10
-Flask-JWT-Extended==4.1.0
 flask-redis==0.4.0
 future==0.18.2
 greenlet==1.1.2
 idna==3.3
-importlib-metadata==4.8.2
+importlib-metadata==4.11.2
 importlib-resources==5.4.0
-Jinja2==3.0.3
+Jinja2==2.11.3
 jmespath==0.10.0
 kombu==4.6.11
 Mako==1.1.6
@@ -87,27 +84,26 @@ packaging==21.3
 phonenumbers==8.12.12
 pyasn1==0.4.8
 pycparser==2.21
-pyparsing==3.0.6
+pyparsing==3.0.7
 PyPDF2==1.26.0
-pyrsistent==0.18.0
+pyrsistent==0.18.1
 PySocks==1.7.1
 python-dateutil==2.8.2
-python-json-logger==0.1.11
+python-json-logger==2.0.2
 pytz==2021.3
 PyYAML==5.4.1
-redis==4.0.2
-requests==2.26.0
+redis==4.1.4
+requests==2.27.1
 requests-file==1.5.1
 rsa==4.7.2
-s3transfer==0.5.0
+s3transfer==0.5.2
 six==1.16.0
 smartypants==2.0.1
 statsd==3.3.0
-typing-extensions==4.0.1
-Unidecode==1.1.1
-urllib3==1.26.7
+typing_extensions==4.1.1
+urllib3==1.26.8
 vine==1.3.0
 webencodings==0.5.1
-Werkzeug==2.0.2
+Werkzeug==1.0.1
 wrapt==1.13.3
-zipp==3.6.0
+zipp==3.7.0
