twistlock requires checkout setep for actions

--- a/.github/workflows/twistlock.yml
+++ b/.github/workflows/twistlock.yml
@@ -12,6 +12,10 @@ jobs:
   twistlock-scan:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.ref }}
+          
       - name: Configure VAEC AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
