--- a/.github/workflows/twistlock.yml
+++ b/.github/workflows/twistlock.yml
@@ -3,6 +3,9 @@ name: Twistlock
 on:
   workflow_call:
     inputs:
+      environment: 
+        required: true
+        type: string
       ref:
         description: "Docker image tag to scan"
         required: true
@@ -15,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.ref }}
-          
+
       - name: Configure VAEC AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -34,7 +37,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr-vaec.outputs.registry }}
           IMAGE_REPOSITORY: "notification_api"
-          IMAGE_TAG: ${{ inputs.ref }}
+          IMAGE_TAG: ${{ inputs.ref }}_${{ inputs.environment }}
         uses: ./.github/actions/run-commands-on-ec2
         with:
           instance-id-ssm-parameter-path: /utility/twistlock/instance
