reverting back so releases go to staging and production

--- a/.github/workflows/release_trigger.yml
+++ b/.github/workflows/release_trigger.yml
@@ -16,10 +16,10 @@ jobs:
         with: 
           script: | 
             if ('${{ github.event.action }}' === 'prereleased') {
-              core.setOutput('environment', 'perf')
+              core.setOutput('environment', 'staging')
             }
             if ('${{ github.event.action }}' === 'released') {
-              core.setOutput('environment', 'perf')
+              core.setOutput('environment', 'prod')
             }
       
       - name: Get the version
